# tufty2350-boilerplate

./: CMakeLists.txt  pimoroni_tufty2350.h
lib/jpegdec/: jpegdec.cmake
lib/picovector/: picovector.cmake  picovector.config.hpp  picovector.cpp
lib/powman/: powman.cmake  powman.h
lib/psram/: psram.c  psram.cmake  psram.h
lib/st7789/: st7789.cmake  st7789.cpp  st7789.hpp
src/: main.cpp
